--- a/src/flowlab-core/package.json
+++ b/src/flowlab-core/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "jest"
   },
   "keywords": [
     "workflow",
@@ -26,6 +27,10 @@
     "redis": "^4.6.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "esbuild": "^0.25.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.0",
     "typescript": "^4.5.0"
   }
 }
