--- a/src/flowlab-core/package.json
+++ b/src/flowlab-core/package.json
@@ -5,12 +5,13 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "flowlab": "./cli/index.js"
+    "flowlab": "./dist/cli/index.cjs"
   },
   "scripts": {
-    "build": "tsc",
-    "prepublishOnly": "npm run build",
-    "test": "jest"
+    "build": "node esbuild.config.js",
+    "dev": "node esbuild.config.js --watch",
+    "test": "jest",
+    "start": "node dist/index.js"
   },
   "keywords": [
     "workflow",
@@ -20,7 +21,7 @@
     "工作流引擎",
     "orchestration"
   ],
-  "author": "",
+  "author": "luke king",
   "license": "MIT",
   "dependencies": {
     "ioredis": "^5.6.0",
