--- a/src/flowlab-core/package.json
+++ b/src/flowlab-core/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "flowlab": "./dist/cli/index.cjs"
+    "flowlab": "dist/cli/index.cjs"
   },
   "scripts": {
     "build": "node esbuild.config.js",
