--- a/packages/event/package.json
+++ b/packages/event/package.json
@@ -18,13 +18,25 @@
     "dev": "tsup src/index.ts --watch",
     "test": "jest"
   },
+  "keywords": [
+    "event",
+    "event-driven",
+    "event-bus",
+    "event-emitter",
+    "event-handler",
+    "event-listener",
+    "event-dispatcher"
+  ],
+  "author": "luke king",
+  "license": "MIT",
   "dependencies": {
     "eventemitter3": "^5.0.1",
     "ioredis": "^5.6.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
+    "ts-jest": "^29.3.0",
     "tsup": "^7.2.0",
     "typescript": "^5.3.3"
   }
