--- a/packages/event/tsconfig.json
+++ b/packages/event/tsconfig.json
@@ -8,7 +8,7 @@
     "esModuleInterop": true,
     "strict": true,
     "resolveJsonModule": true,
-    "types": ["node"]
+    "types": ["node", "jest"]
   },
-  "include": ["src"]
+  "include": ["src", "__tests__"]
 }
