--- a/packages/event/package.json
+++ b/packages/event/package.json
@@ -4,6 +4,9 @@
   "description": "FlowLab event-driven system",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "flowlab-event": "./dist/cli/index.js"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -14,7 +17,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts --out-dir dist",
+    "build": "tsup --config tsup.config.ts",
     "dev": "tsup src/index.ts --watch",
     "test": "jest"
   },
