--- a/packages/event/package.json
+++ b/packages/event/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "flowlab-event": "./dist/cli/index.js"
+    "flow-event": "./dist/cli/index.js"
   },
   "exports": {
     ".": {
@@ -33,8 +33,10 @@
   "author": "luke king",
   "license": "MIT",
   "dependencies": {
+    "cac": "^6.7.14",
     "eventemitter3": "^5.0.1",
-    "ioredis": "^5.6.0"
+    "ioredis": "^5.6.0",
+    "picocolors": "^1.1.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
